--- a/index.css
+++ b/index.css
@@ -78,7 +78,7 @@ header{
     position: absolute;
     border-bottom-width: 0 ;
     bottom: -8.5vh;
-    right: 47%;
+    right: 50%;
     margin-right: -2.4vh;
     width: 0;
     height: 0;
@@ -90,7 +90,13 @@ header{
 
 .projects{
     background-color: #2B313D;
-    height: 100px;
+}
+.projects>h1{
+    color: #D4CEC2;
+    text-align: center;
+    padding: 20vh 0;
+    font-size: 4rem;
+  
 }
 
 .about{
@@ -119,6 +125,43 @@ header{
     font-size: 1.5rem;
 }
 
+
+.techstack {
+	align-items: center;
+	background: #E3E3E3;
+	display: flex;
+	/* height: 100vh; */
+	justify-content: center;
+    /* padding: 50px; */
+}
+
+@keyframes scroll {
+	0% { transform: translateX(0); }
+	100% { transform: translateX(calc(-250px * 9))}
+}
+
+    .slider {
+        background: white;
+        box-shadow: 0 10px 20px -5px rgba(0, 0, 0, .125);
+        padding:50px ;
+        overflow:hidden;
+        position: relative;
+    }
+	.slider::before,
+	.slider::after {
+		content: "";
+		height: 100px;
+		position: absolute;
+		width: 200px;
+		z-index: 2;
+	}
+	
+	.slider .slide-track {
+		animation: scroll 40s linear infinite;
+		display: flex;
+		width: calc(250px * 17);
+	}
+
 @media all and (max-width: 920px)  {
     body{
         width: 100%;
@@ -134,6 +177,9 @@ header{
     }
     .landing h1{
         font-size: 4.2rem;
+    }
+    .landing::after{
+        right: 47%;
     }
   
 }
@@ -151,8 +197,8 @@ header{
         grid-template-columns: 100%;
         justify-content: space-around;
     }
-    .landing{
-        /* width: 100%; */
+    .landing::after{
+        right: 43%;
     }
     .header li{
         padding: 1.2rem;
