--- a/index.css
+++ b/index.css
@@ -90,6 +90,7 @@ header{
 
 .projects{
     background-color: #2B313D;
+    padding-bottom: 7rem;
 }
 .projects>h1{
     color: #D4CEC2;
@@ -98,7 +99,55 @@ header{
     font-size: 4rem;
   
 }
+.project{
+    width: 80%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(2,3fr);
+    gap: 2rem;
+}
+.details{
+    height: 100%;
+    padding-top: 2rem;
+    position: relative;
+    padding-bottom: 1rem;
+}
+.soloProject{
+    border: 1px solid;
+    background-color: #56617A;
+}
+.soloProject>div>img{
+    width: 100%;
+    height: 15rem;
+}
+.project .details h2{
+    font-size: 2.2rem;
+    padding: 0;
+    color: #F16856;
+    padding-bottom: 2rem;
+    padding-left: 1rem;
+}
+.projects .fa-github{
+    color: #F7F7F7;
+   position: absolute;
+   right: 1rem;
+   top: 2rem;
+   transition: .25s all ease-in-out;
+}
+.projects .fa-github:hover{
+    color: #F16856;
+    cursor: pointer;
+}
 
+.project .details p{
+    font-size: 1.5rem;
+    text-align: justify;
+    padding: 0;
+    color: #EBEFF3;
+    padding-bottom: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
 .about{
     background-color: #F7F7F7;
     width: 100%;
