--- a/index.css
+++ b/index.css
@@ -3,6 +3,9 @@
         padding: 0;
         box-sizing: border-box;
     }
+ html{
+    scroll-behavior: smooth;
+ }
     header{
         background-color: #F7F7F7;
         position:fixed;
