about me  color corretion

--- a/index.css
+++ b/index.css
@@ -203,7 +203,7 @@
         padding-top: 4rem;
         width: 60%;
         margin: auto;
-        color: #9CA9BD;
+        color: #56617A;
         font-weight: 400;
         font-size: 1.5rem;
     }
